--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "amplify-react-router",
   "version": "1.0.0",
   "description": "AWS Amplify's Auth wrapped with reach router",
-  "main": "src/index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.es.js",
+  "jsnext:main": "dist/index.es.js",
   "scripts": {
     "start": "react-scripts start",
+    "build": "rollup -c",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,6 +28,7 @@
     "aws-amplify-react": "^2.3.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "prop-types": "^15.5.4",
     "aws-amplify": "^1.1.24"
   },
   "devDependencies": {
@@ -33,6 +37,21 @@
     "aws-amplify-react": "^2.3.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "aws-amplify": "^1.1.24"
+    "aws-amplify": "^1.1.24",
+    "@svgr/rollup": "^2.4.1",
+    "babel-core": "^6.26.3",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "cross-env": "^5.1.4",
+    "react-scripts": "^1.1.4",
+    "rollup": "^0.64.1",
+    "rollup-plugin-babel": "^3.0.7",
+    "rollup-plugin-commonjs": "^9.1.3",
+    "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-peer-deps-external": "^2.2.0",
+    "rollup-plugin-postcss": "^1.6.2",
+    "rollup-plugin-url": "^1.4.0"
   }
 }
