--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "amplify-react-router",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "AWS Amplify's Auth wrapped with reach router",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
@@ -8,6 +8,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "rollup -c",
+    "release":"npm run build && npm publish",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
