--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.9",
   "description": "AWS Amplify's Auth wrapped with reach router",
   "main": "dist/index.js",
+  "types": "src/index.d.ts",
   "module": "dist/index.es.js",
   "jsnext:main": "dist/index.es.js",
   "scripts": {
