--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "amplify-react-router",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "description": "AWS Amplify's Auth wrapped with reach router",
   "main": "dist/index.js",
   "types": "src/index.d.ts",
@@ -8,6 +8,7 @@
   "jsnext:main": "dist/index.es.js",
   "scripts": {
     "start": "react-scripts start",
+    "prepublishOnly": "npm run build",
     "build": "rollup -c",
     "release": "npm run build && npm publish",
     "test": "echo \"Error: no test specified\" && exit 1"
