--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "amplify-react-router",
-  "version": "1.0.13",
+  "version": "2.0.0-alpha.1",
   "description": "AWS Amplify's Auth wrapped with reach router",
   "main": "dist/index.js",
   "types": "src/index.d.ts",
@@ -8,9 +8,9 @@
   "jsnext:main": "dist/index.es.js",
   "scripts": {
     "start": "react-scripts start",
-    "prepublishOnly": "npm run build",
+    "prepublishOnly": "yarn build",
     "build": "rollup -c",
-    "release": "npm run build && npm publish",
+    "release": "yarn build && yarn publish",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -27,7 +27,6 @@
   },
   "homepage": "https://github.com/Two-Lambda-Labs/amplify-react-router#readme",
   "peerDependencies": {
-    "@reach/router": "^1.2.1",
     "aws-amplify-react": "^2.3.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
