--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "amplify-react-router",
-  "version": "2.0.0-alpha.1",
+  "version": "2.0.0-alpha.2",
   "description": "AWS Amplify's Auth wrapped with reach router",
   "main": "dist/index.js",
   "types": "src/index.d.ts",
@@ -27,26 +27,26 @@
   },
   "homepage": "https://github.com/Two-Lambda-Labs/amplify-react-router#readme",
   "peerDependencies": {
+    "aws-amplify": "^1.1.24",
     "aws-amplify-react": "^2.3.4",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
     "prop-types": "^15.5.4",
-    "aws-amplify": "^1.1.24"
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
   },
   "devDependencies": {
-    "eslint-config-availity": "^4.0.2",
     "@reach/router": "^1.2.1",
-    "aws-amplify-react": "^2.3.4",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "aws-amplify": "^1.1.24",
     "@svgr/rollup": "^2.4.1",
+    "aws-amplify": "^1.1.24",
+    "aws-amplify-react": "^2.3.4",
     "babel-core": "^6.26.3",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "cross-env": "^5.1.4",
+    "eslint-config-availity": "^4.0.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-scripts": "^1.1.4",
     "rollup": "^0.64.1",
     "rollup-plugin-babel": "^3.0.7",
